[project]
name = "vuid"
version = "0.1.1a"
description = "Vahid Unique ID Generator"
readme = "README.md"
repository = "https://github.com/vahidtwo/vuid"
documentation = "https://vahidtwo.github.io/vuid/"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = [
  {include = "vuid"}
]

[tool.pdm]
index = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.black]
line-length = 121
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["vuid"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.2",
    "pytest>=8.3.4",
]


